--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-location ~* \.(jpg|jpeg|png|gif|css|js)$ {
-    expires 1y;
-    add_header Cache-Control "public, max-age=31536000";
+location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff2|svg)$ {
+    expires 7d;
+    add_header Cache-Control "public, max-age=604800";
 }
